refactor(quality): triage SonarQube bucket-C (backend tools + tests)
Fix 36 issues, suppress 10 false positives with rationale across app/tools/,
app/utils/, and test/. All play autotest pass.

Fixed:
- S1854 dead-store (9): drop unused locals; fold foundTerminalImage flag
  into the early-return path it gated.
- S5778 multi-call assertThrows (7): extract setup calls out of lambdas
  so only the asserted call is inside.
- S112 generic exception (6): RuntimeException -> IOException for I/O
  paths in WebFetchTool; -> IllegalStateException for unrecoverable
  JDK-install issues in {Password,Token}Hasher.
- S6126 string concat -> text block (4).
- S1141 nested try/catch (1 fix + 2 suppressed): DocumentsTool +
  FileSystemTools.applyPatchLocked keep per-op rollback context.
- S6885 Math.max(min, Math.min(max, x)) -> Math.clamp (2).
- S1871 case-bodies merged (2).
- S1144 unused private method (2): delete.
- S5785 assertFalse(.equals()) -> assertNotEquals (1).
- S4144 dupe @Before/@After bodies (1): extract resetState() helper.
- S2589 always-true condition (1): removed with S1854 fix above.
- S2093 try-with-resources for MockTelegramServer (1).
- S131 missing default branch (1): unreachable IllegalStateException.

Suppressed with rationale:
- S6213 method name `record` (2): semantically correct verb matching
  HdrHistogram.recordValue / Micrometer Timer.record across 16+ callers.
- S1172 unused parameter (2): seedProvider modelId param documents
  which model the JSON literal represents at call sites.
- S3415 assertEquals order (1): false positive; List.of(...) IS the
  expected literal.
- S1181 catch(Throwable) (1): RetryScheduler boundary must surface
  Errors to the caller's get() rather than swallow on daemon thread.